--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,9 @@
     ],
     "type": "wordpress-plugin",
     "require": {
-        "illuminate/support": "^10.43",
-        "illuminate/container": "^10.43",
-        "illuminate/config": "^10.43",
+        "illuminate/support": "*",
+        "illuminate/container": "*",
+        "illuminate/config": "*",
         "stoutlogic/acf-builder": "^1.12"
     },
     "config": {
